FIX: contraste

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -214,7 +214,7 @@ article a {
   text-decoration-line: underline !important;
   text-decoration-style: dotted !important;
   text-decoration-thickness: 1px !important;
-  text-decoration-color: var(--color-brand-muted) !important;
+  text-decoration-color: var(--color-brand-accent) !important;
 
   /* On impose l'offset */
   text-underline-offset: 5px !important;
